Add integration tests and correct unit tests

--- a/microservice-payment/pom.xml
+++ b/microservice-payment/pom.xml
@@ -70,6 +70,12 @@
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>io.specto</groupId>
+			<artifactId>hoverfly-java</artifactId>
+			<version>0.8.1</version>
+		</dependency>
+
 	</dependencies>
 
 	<dependencyManagement>
