--- a/eureka-server/src/main/resources/application.yml
+++ b/eureka-server/src/main/resources/application.yml
@@ -8,6 +8,6 @@ spring:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:9102/eureka/
+      defaultZone: http://10.126.226.2:9102/eureka/
     registerWithEureka: false
     fetchRegistry: false
