--- a/microservice-payment/src/main/resources/application.yml
+++ b/microservice-payment/src/main/resources/application.yml
@@ -17,4 +17,4 @@ server:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:9102/eureka/
+      defaultZone: http://10.126.226.2:9102/eureka/
