--- a/microservice-products/src/main/resources/application.yml
+++ b/microservice-products/src/main/resources/application.yml
@@ -23,4 +23,4 @@ my-configs:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:9102/eureka/
+      defaultZone: http://10.126.226.2:9102/eureka/
