--- a/zuul-server/Dockerfile
+++ b/zuul-server/Dockerfile
@@ -1,4 +1,4 @@
-FROM docker-registry.devops.sec.safran:80/openjdk:8u151-alpine
+FROM docker-registry.devops.sec.safran:80/openjdk:8-jdk
 
 COPY ./target/zuul-server-0.0.1-SNAPSHOT.jar /usr/app/
 
