--- a/zuul-server/src/main/resources/application.yml
+++ b/zuul-server/src/main/resources/application.yml
@@ -14,5 +14,5 @@ server:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:9102/eureka/
+      defaultZone: http://10.126.226.2:9102/eureka/
 
